fixed horizontal scroll
fixed horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -2969,7 +2969,7 @@ position: relative;
 
 .m-t-100{margin-top:100px;}
 
-.tech-dev-img{width: 700px; height: 700px;}
+.tech-dev-img{width: 650px; height: 700px;}
 
 .cmn-pad-50 {
     padding: 50px 0;
